[gd_scene load_steps=8 format=3 uid="uid://btpmrtqurv82x"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_pa3dl"]
[ext_resource type="Script" path="res://Scripts/Shop.gd" id="2_exrl1"]
[ext_resource type="Texture2D" uid="uid://dfkjdnvqqbs6j" path="res://Images/Main Menu Background Teal Color.png" id="2_lpnd8"]
[ext_resource type="Texture2D" uid="uid://igpg4mni31vx" path="res://Images/New Game Button (1).png" id="3_7xcpu"]
[ext_resource type="FontFile" uid="uid://xmpx3ananbw8" path="res://Fonts/Meteoric-light.otf" id="4_5e6j0"]
[ext_resource type="Texture2D" uid="uid://32nnnpukb4bv" path="res://Images/Glow Button.png" id="4_yf0eu"]

[sub_resource type="FontVariation" id="FontVariation_1nx73"]
base_font = ExtResource("4_5e6j0")
variation_embolden = 1.36

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pa3dl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lpnd8")

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
color = Color(0.329412, 0.403922, 0.411765, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 38.0
offset_top = 1430.0
offset_right = 429.0
offset_bottom = 1877.0

[node name="Start" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Start"
icon = ExtResource("3_7xcpu")

[node name="Options" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Quit"

[node name="NewGame Button" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_7xcpu")
texture_pressed = ExtResource("4_yf0eu")
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/NewGame Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.5
offset_top = -18.0
offset_right = 55.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.909804, 0.654902, 0.337255, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_1nx73")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]New Game[/center]"

[node name="Options Button" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_7xcpu")
texture_pressed = ExtResource("4_yf0eu")
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Options Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.5
offset_top = -18.0
offset_right = 55.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.909804, 0.654902, 0.337255, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_1nx73")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Options[/center]"

[node name="PointLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 180.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HighScore" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 99.0
offset_right = 180.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2

[node name="Booster Points" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -498.0
offset_right = 100.0
offset_bottom = -448.0
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
text = "[center] Booster Points: "

[node name="Buy Shield" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = 273.0
offset_right = 45.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2
text = "Buy Shield"

[node name="Shop" type="Node2D" parent="."]
script = ExtResource("2_exrl1")

[node name="Buy Points" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -559.0
offset_right = 4.0
offset_bottom = -551.0
grow_horizontal = 2
grow_vertical = 0
text = "Buy Points"

[node name="Buy Boosters" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -433.0
offset_right = 55.0
offset_bottom = -402.0
grow_horizontal = 2
grow_vertical = 0
text = "Buy Boosters"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGame Button" to="." method="start_button_pressed"]
[connection signal="button_down" from="Buy Shield" to="Shop" method="Buy_Shield"]
[connection signal="pressed" from="Buy Points" to="Shop" method="Buy_Points"]
[connection signal="pressed" from="Buy Boosters" to="Shop" method="Buy_Boosters"]
